[package]
name = "rs-blocks-tokio"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3.5"
chrono = "0.4.38"
futures = "0.3.30"
futures-util = "0.3.30"
indexmap = { version = "2.6.0", features = ["serde"] }
regex = "1.11.0"
rs-blocks-macros = { version = "0.1.0", path = "rs-blocks-macros" }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["fs", "macros", "process", "rt", "signal", "time"] }
toml = { version = "0.8.19", features = ["preserve_order"] }
