[package]
name = "rs-blocks-tokio"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3"
chrono = "0.4"
futures = "0.3"
futures-util = "0.3"
indexmap = { version = "2.6", features = ["serde"] }
itertools = "0.13"
pin-project = "1.1"
regex = "1.11"
rs-blocks-macros = { version = "0.1.0", path = "rs-blocks-macros" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.41", features = ["fs", "io-util", "macros", "process", "rt", "signal", "time"] }
toml = { version = "0.8", features = ["preserve_order"] }
